# megaknight

./: .gitignore  pyproject.toml
student/: .singlesearch.py.un~  capture-team.txt  capture.py  singlesearch.py~
