[build-system]
requires = ["setuptools>=60", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pacai"
version = "2.0.0"
description = "An AI educational project disguised as Pac-Man."
requires-python = ">=3.10"
dependencies = [
    "Pillow>=8.3.2",
    "edq-utils>=0.0.5",
    "json5>=0.9.14",
]

[tool.setuptools]
packages = ["pacai"]
package-dir = {"pacai" = "."}

